# Django_Review_PJ

./: .gitignore  manage.py  pyproject.toml  requirements.txt
config/: schema.py  settings.py  urls.py
config/settings/: base.py  local.py  prod.py
oz/: pyvenv.cfg
restaurants/: models.py  serializers.py  tests.py  urls.py  views.py
restaurants/migrations/: 0001_initial.py
reviews/: models.py  serializers.py  tests.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_initial.py
users/: authentication.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_is_active_user_is_staff.py
